fix project spacing

--- a/src/style.scss
+++ b/src/style.scss
@@ -851,7 +851,7 @@ a {
 }
 
 .gallery {
-	width: 18em;
+	width: 16em;
 	padding: 0;
 	margin-block: 2em;
 	transition: transform 0.5s ease-in-out;
@@ -866,7 +866,7 @@ a {
 	flex-direction: column;
 	justify-content: flex-start;
 	align-items: center;
-	width: 73vw;
+	width: 70vw;
 	height: 100%;
 	margin-block: 1em;
 }
